Timing and log tweaks

--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -21,6 +21,10 @@
             {
                 "name": "Terry Hendrix",
                 "email": "terryhendrix90@gmail.com"
+            },
+            {
+                "name": "Adrian Rockall",
+                "email": "ady@rockall.plus.com"
             }
         ]
     },
