--- a/app.json
+++ b/app.json
@@ -22,6 +22,10 @@
       {
         "name": "Terry Hendrix",
         "email": "terryhendrix90@gmail.com"
+      },
+      {
+        "name": "Adrian Rockall",
+        "email": "ady@rockall.plus.com"
       }
     ]
   },
@@ -194,7 +198,7 @@
             {
               "id": "host_check_interval",
               "type": "number",
-              "value": 10,
+              "value": 15,
               "label": {
                 "en": "Check Interval"
               }
@@ -263,7 +267,7 @@
             {
               "id": "host_check_interval",
               "type": "number",
-              "value": 10,
+              "value": 15,
               "label": {
                 "en": "Check Interval"
               }
