Updated notes and app.json

--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -33,7 +33,18 @@
     "sdk": 3,
     "brandColor": "#FF7D4B",
     "author": {
-        "name": "Terry Hendrix",
-        "email": "terryhendrix90@gmail.com"
-    }
+        "name": "Adrian Rockall",
+        "email": "ady@rockall.plus.com"
+    },
+    "contributing": {
+        "donate": {
+            "paypal": {
+                "username": "adyrock"
+            }
+        }
+    },
+    "bugs": {
+        "url": "https://github.com/AdyRock/homey-netscan/issues"
+    },
+    "source": "https://github.com/AdyRock/homey-netscan"
 }
