--- a/app.json
+++ b/app.json
@@ -34,9 +34,20 @@
   "sdk": 3,
   "brandColor": "#FF7D4B",
   "author": {
-    "name": "Terry Hendrix",
-    "email": "terryhendrix90@gmail.com"
+    "name": "Adrian Rockall",
+    "email": "ady@rockall.plus.com"
   },
+  "contributing": {
+    "donate": {
+      "paypal": {
+        "username": "adyrock"
+      }
+    }
+  },
+  "bugs": {
+    "url": "https://github.com/AdyRock/homey-netscan/issues"
+  },
+  "source": "https://github.com/AdyRock/homey-netscan",
   "flow": {
     "triggers": [
       {
