--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -1,5 +1,5 @@
 {
-    "id": "nl.terryhendrix.netscan",
+    "id": "com.netscan",
     "name": {
         "en": "Net Scan",
         "nl": "Net Scan"
