--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
-  "id": "nl.terryhendrix.netscan",
+  "id": "com.netscan",
   "name": {
     "en": "Net Scan",
     "nl": "Net Scan"
@@ -29,7 +29,7 @@
       }
     ]
   },
-  "version": "1.0.2",
+  "version": "2.0.0",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "brandColor": "#FF7D4B",
