--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -28,7 +28,7 @@
             }
         ]
     },
-    "version": "2.0.2",
+    "version": "2.0.3",
     "compatibility": ">=5.0.0",
     "sdk": 3,
     "brandColor": "#FF7D4B",
@@ -47,5 +47,23 @@
         "url": "https://github.com/AdyRock/homey-netscan/issues"
     },
     "source": "https://github.com/AdyRock/homey-netscan",
-    "homeyCommunityTopicId": 47454
+    "homeyCommunityTopicId": 47454,
+    "api":
+    {
+        "getLog":
+        {
+            "method": "get",
+            "path": "/getLog/"
+        },
+        "clearLog":
+        {
+            "method": "post",
+            "path": "/clearLog/"
+        },
+        "SendInfoLog":
+        {
+            "method": "post",
+            "path": "/SendInfoLog/"
+        }
+    }
 }
