--- a/app.json
+++ b/app.json
@@ -29,7 +29,7 @@
       }
     ]
   },
-  "version": "2.0.2",
+  "version": "2.0.3",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "brandColor": "#FF7D4B",
@@ -49,6 +49,20 @@
   },
   "source": "https://github.com/AdyRock/homey-netscan",
   "homeyCommunityTopicId": 47454,
+  "api": {
+    "getLog": {
+      "method": "get",
+      "path": "/getLog/"
+    },
+    "clearLog": {
+      "method": "post",
+      "path": "/clearLog/"
+    },
+    "SendInfoLog": {
+      "method": "post",
+      "path": "/SendInfoLog/"
+    }
+  },
   "flow": {
     "triggers": [
       {
