--- a/package.json
+++ b/package.json
@@ -1,1 +1,25 @@
-{}
+{
+    "name": "com.netscan",
+    "version": "2.0.3",
+    "description": "Adds support to Homey to detect network devives",
+    "main": "app.js",
+    "dependencies": {
+        "nodemailer": "^6.4.16"
+    },
+    "devDependencies": {
+        "homey": "^2.19.2"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/AdyRock/com.netscan.git"
+    },
+    "author": "Adrian Rockall",
+    "license": "GPL-3.0-only",
+    "bugs": {
+        "url": "https://github.com/AdyRock/com.netscan/issues"
+    },
+    "homepage": "https://github.com/AdyRock/com.netscan#readme",
+    "engines": {
+        "node": ">=8"
+    }
+}
