--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.netscan",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "name": {
     "en": "Net Scan",
     "nl": "Net Scan"
@@ -365,7 +365,7 @@
     "alarm_offline": {
       "type": "boolean",
       "title": {
-        "en": "Device Offline"
+        "en": "Offline Alarm"
       },
       "getable": true,
       "setable": false,
