--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.netscan",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "name": {
     "en": "Net Scan",
     "nl": "Net Scan"
@@ -272,6 +272,7 @@
           "children": [
             {
               "id": "host",
+              "hint": "IP address of the device to check",
               "type": "text",
               "value": "0.0.0.0",
               "label": {
@@ -281,18 +282,31 @@
             },
             {
               "id": "host_check_interval",
+              "hint": "Time between checks for the device",
               "type": "number",
               "value": 15,
+              "units": "seconds",
               "label": {
                 "en": "Check Interval"
               }
             },
             {
               "id": "host_timeout",
+              "hint": "Time to wait before reporting the device is offline",
               "type": "number",
               "value": 10,
+              "units": "seconds",
               "label": {
                 "en": "Check Timeout"
+              }
+            },
+            {
+              "id": "host_unreachable_checks",
+              "hint": "Number of unreachable failures before reporting the device is offline",
+              "type": "number",
+              "value": 1,
+              "label": {
+                "en": "Unreachable checks"
               }
             }
           ]
@@ -338,6 +352,7 @@
           "children": [
             {
               "id": "host",
+              "hint": "IP address of the device to check",
               "type": "text",
               "value": "0.0.0.0",
               "label": {
@@ -347,6 +362,7 @@
             },
             {
               "id": "tcp_port",
+              "hint": "Port number on check on the device",
               "type": "number",
               "value": 9090,
               "label": {
@@ -357,18 +373,31 @@
             },
             {
               "id": "host_check_interval",
+              "hint": "Time between checks for the device",
               "type": "number",
               "value": 15,
+              "units": "seconds",
               "label": {
                 "en": "Check Interval"
               }
             },
             {
               "id": "host_timeout",
+              "hint": "Time to wait before reporting the device is offline",
               "type": "number",
               "value": 10,
+              "units": "seconds",
               "label": {
                 "en": "Check Timeout"
+              }
+            },
+            {
+              "id": "host_unreachable_checks",
+              "hint": "Number of unreachable failures before reporting the device is offline",
+              "type": "number",
+              "value": 1,
+              "label": {
+                "en": "Unreachable checks"
               }
             }
           ]
