--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.netscan",
-  "version": "2.0.7",
+  "version": "2.0.8",
   "name": {
     "en": "Net Scan",
     "nl": "Net Scan"
@@ -178,8 +178,8 @@
       {
         "id": "ip_device_is_online",
         "title": {
-          "en": "Device is online",
-          "nl": "Apparaat is online"
+          "en": "Device is !{{online|offline}}",
+          "nl": "Apparaat is !{{online|offline}}"
         },
         "args": [
           {
@@ -192,8 +192,8 @@
       {
         "id": "ip_device_is_offline",
         "title": {
-          "en": "Device is offline",
-          "nl": "Apparaat is offline"
+          "en": "Device is !{{offline|online}}",
+          "nl": "Apparaat is !{{offline|online}}"
         },
         "args": [
           {
@@ -201,13 +201,14 @@
             "name": "device",
             "filter": "driver_id=ip_driver"
           }
-        ]
+        ],
+        "deprecated": true
       },
       {
         "id": "device_is_online",
         "title": {
-          "en": "Device is online",
-          "nl": "Apparaat is online"
+          "en": "Device is !{{online|offline}}",
+          "nl": "Apparaat is !{{online|offline}}"
         },
         "args": [
           {
@@ -220,8 +221,8 @@
       {
         "id": "device_is_offline",
         "title": {
-          "en": "Device is offline",
-          "nl": "Apparaat is offline"
+          "en": "Device is !{{offline|online}}",
+          "nl": "Apparaat is !{{offline|online}}"
         },
         "args": [
           {
@@ -229,7 +230,8 @@
             "name": "device",
             "filter": "driver_id=tcp_driver"
           }
-        ]
+        ],
+        "deprecated": true
       }
     ]
   },
