Update app.json - German language added

--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -14,7 +14,8 @@
     },
     "description": {
         "en": "Watch devices on your local network by scanning for TCP ports",
-        "nl": "Houdt apparaten op uw netwerk in de gaten middels een TCP poort"
+        "nl": "Houdt apparaten op uw netwerk in de gaten middels een TCP poort",
+        "de": "Überwachen Sie Geräte in Ihrem lokalen Netzwerk durch Scannen der TCP Ports"
     },
     "contributors": {
         "developers": [
