--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,18 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [{
+    "configurations": [
+    {
+        "type": "node",
+        "request": "attach",
+        "restart": true,
+        "name": "Attach to Docker Homey",
+        "address": "0.0.0.0",
+        "port": 9229,
+        "localRoot": "${workspaceFolder}",
+        "remoteRoot": "/"
+    },
+    {
         "type": "node",
         "request": "attach",
         "restart": true,
@@ -12,5 +23,56 @@
         "port": 9221,
         "localRoot": "${workspaceFolder}",
         "remoteRoot": "/"
-    }, ]
+    },
+    {
+        "type": "node",
+        "request": "attach",
+        "restart": true,
+        "name": "Attach to Homey Dev",
+        "address": "192.168.1.56",
+        "port": 9221,
+        "localRoot": "${workspaceFolder}",
+        "remoteRoot": "/"
+    },
+    {
+        "type": "node",
+        "request": "attach",
+        "restart": true,
+        "name": "Attach to Homey USB",
+        "address": "10.76.225.1",
+        "port": 9221,
+        "localRoot": "${workspaceFolder}",
+        "remoteRoot": "/"
+    },
+    {
+        "type": "node",
+        "request": "attach",
+        "restart": true,
+        "name": "Attach to Homey Dev USB",
+        "address": "10.116.240.1",
+        "port": 9221,
+        "localRoot": "${workspaceFolder}",
+        "remoteRoot": "/"
+    },
+    {
+        "type": "node",
+        "request": "attach",
+        "restart": true,
+        "name": "Attach to Homey 2023",
+        "address": "192.168.1.32",
+        "port": 9221,
+        "localRoot": "${workspaceFolder}",
+        "remoteRoot": "/app/"
+    },
+    {
+        "type": "node",
+        "request": "attach",
+        "restart": true,
+        "name": "Attach to Docker Homey 2023",
+        "address": "0.0.0.0",
+        "port": 9229,
+        "localRoot": "${workspaceFolder}",
+        "remoteRoot": "/app/"
+    },
+]
 }
