chore: update homey dependency from version 2.28.1 to 3.7.15

--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -1,57 +1,62 @@
 {
-    "id": "com.netscan",
-    "version": "2.0.8",
-    "name": {
-        "en": "Net Scan",
-        "nl": "Net Scan"
-    },
-    "platforms": [
-        "local"
-      ],
-        "category": [
-        "internet",
-        "tools"
-    ],
-    "images": {
-        "large": "assets/large.png",
-        "small": "assets/small.png"
-    },
-    "description": {
-        "en": "Watch devices on your local network by scanning for TCP ports",
-        "nl": "Houdt apparaten op uw netwerk in de gaten middels een TCP poort",
-        "de": "Überwachen Sie Geräte in Ihrem lokalen Netzwerk durch Scannen der TCP-Ports"
-    },
-    "contributors": {
-        "developers": [
-            {
-                "name": "Terry Hendrix",
-                "email": "terryhendrix90@gmail.com"
-            },
-            {
-                "name": "Adrian Rockall",
-                "email": "ady@rockall.plus.com"
-            }
-        ]
-    },
-    "compatibility": ">=5.0.0",
-    "sdk": 3,
-    "brandColor": "#FF7D4B",
-    "author": {
-        "name": "Adrian Rockall",
-        "email": "ady@rockall.plus.com"
-    },
-    "contributing": {
-        "donate": {
-            "paypal": {
-                "username": "adyrock"
-            }
-        }
-    },
-    "support": "https://github.com/AdyRock/homey-netscan/issues",
-    "bugs": {
-        "url": "https://github.com/AdyRock/homey-netscan/issues"
-    },
-    "source": "https://github.com/AdyRock/homey-netscan",
+	"id": "com.netscan",
+	"version": "2.0.9",
+	"name": {
+		"en": "Net Scan",
+		"nl": "Net Scan"
+	},
+	"platforms": [
+		"local"
+	  ],
+		"category": [
+		"internet",
+		"tools"
+	],
+	"images": {
+		"large": "assets/large.png",
+		"small": "assets/small.png"
+	},
+	"description": {
+		"en": "Watch devices on your local network by scanning for TCP ports",
+		"nl": "Houdt apparaten op uw netwerk in de gaten middels een TCP poort",
+		"de": "Überwachen Sie Geräte in Ihrem lokalen Netzwerk durch Scannen der TCP-Ports"
+	},
+	"contributors": {
+		"developers": [
+			{
+				"name": "Terry Hendrix",
+				"email": "terryhendrix90@gmail.com"
+			},
+			{
+				"name": "Adrian Rockall",
+				"email": "ady@rockall.plus.com"
+			}
+		],
+		"translators": [
+			{
+				"name": "DE- DirkG"
+			}
+		]
+	},
+	"compatibility": ">=5.0.0",
+	"sdk": 3,
+	"brandColor": "#FF7D4B",
+	"author": {
+		"name": "Adrian Rockall",
+		"email": "ady@rockall.plus.com"
+	},
+	"contributing": {
+		"donate": {
+			"paypal": {
+				"username": "adyrock"
+			}
+		}
+	},
+	"support": "https://github.com/AdyRock/homey-netscan/issues",
+	"bugs": {
+		"url": "https://github.com/AdyRock/homey-netscan/issues"
+	},
+	"source": "https://github.com/AdyRock/homey-netscan",
 	"homeyCommunityTopicId": 47454,
 	"api": {
 		"getLog": {
